--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "jupyter>=1.1.1",
     "matplotlib>=3.10.6",
+    "numpy>=2.3.2",
     "pandas>=2.3.2",
 ]
